--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -7,7 +7,7 @@
         <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
           <h3 class="card-title mb-0">{{couponPass.title}}</h3>
-          <p *ngIf="couponPass.owner">by
+          <p *ngIf="couponPass.owner">di
             <i [routerLink]="['/reserved-area/consumer/producer-info']"
                class="font-weight-bold text-primary cursor-pointer">{{producer === null ? null : producer.username}}</i>
           </p>
@@ -17,20 +17,21 @@
           <p class="card-text mt-3">{{couponPass.description}}</p>
 
           <p class="card-text">
-            <i class="fas fa-fw  fa-clock text-secondary"></i> Validity: {{formatUntil(couponPass.valid_until)}}
+            <i class="fas fa-fw  fa-clock text-secondary"></i> Validità:  {{formatUntil(couponPass.valid_until)}}
             <br/>
 
             <span *ngIf="couponPass.constraints">
               <i class="fas fa-fw fa-map-marker-alt text-secondary"></i> {{couponPass.constraints}}
 
               <img class="img-fluid d-block mt-3" alt="{{couponPass.constraints}} map"
-                   src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' + couponPass.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}"
+                   src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' +
+                    couponPass.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}"
               >
             </span>
           </p>
 
-          <button *ngIf="desktopMode" class=" btn btn-danger btn-retry" (click)="retry()">Back to My Purchases</button>
-          <button *ngIf="!desktopMode" class=" btn btn-danger btn-retry-small" (click)="retry()">My Purchases</button>
+          <button *ngIf="desktopMode" class=" btn btn-danger btn-retry" (click)="retry()">I miei Acquisti</button>
+          <button *ngIf="!desktopMode" class=" btn btn-danger btn-retry-small" (click)="retry()">I miei Acquisti</button>
 
         </div>
 
