--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -3,10 +3,10 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col" style="width: 40%">Title</th>
-          <th scope="col" style="width: 20%">Image</th>
-          <th scope="col" style="width: 15%">Price</th>
-          <th scope="col" style="width: 25%">State</th>
+          <th scope="col" style="width: 40%">Titolo</th>
+          <th scope="col" style="width: 20%">Immagine</th>
+          <th scope="col" style="width: 15%">Prezzo</th>
+          <th scope="col" style="width: 25%">Stato</th>
           <th scope="col" style="width: 10%"></th>
         </tr>
       </thead>
@@ -23,7 +23,7 @@
 
           <td>
             <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
-              <i class="fas fa-info-circle"></i> Details
+              <i class="fas fa-info-circle"></i> Dettagli
             </button>
           </td>
         </tr>
@@ -37,9 +37,9 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" style="width: 50%">Title</th>
-        <th scope="col" style="width: 15%">Price</th>
-        <th scope="col" style="width: 25%">State</th>
+        <th scope="col" style="width: 50%">Titolo</th>
+        <th scope="col" style="width: 15%">Prezzo</th>
+        <th scope="col" style="width: 25%">Stato</th>
         <th scope="col" style="width: 10%"></th>
       </tr>
       </thead>
@@ -55,7 +55,7 @@
 
         <td>
           <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
-            <i class="fas fa-info-circle"></i> Details
+            <i class="fas fa-info-circle"></i> Dettagli
           </button>
         </td>
       </tr>
@@ -68,8 +68,8 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" style="width: 60%">Title</th>
-        <th scope="col" style="width: 20%">State</th>
+        <th scope="col" style="width: 60%">Titolo</th>
+        <th scope="col" style="width: 20%">Stato</th>
         <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
