--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -7,10 +7,11 @@
         <p class="card-text">{{coupon.description}}</p>
       </div>
       <div class="card-footer">
-        <button [disabled]="inCart(coupon.id)" type="button" class="btn btn-success float-right ml-1" title="{{inCart(coupon.id) ? 'Item already added: go to the cart to change the quantity.' : ''}}"
-                (click)="openModal(template, coupon)"><i class="fas fa-cart-plus"></i> Add
+        <button [disabled]="inCart(coupon.id)" type="button" class="btn btn-success float-right ml-1" title="{{inCart(coupon.id) ?
+         'Articolo già aggiunto: vai al carrello per cambiare la quantità.' : ''}}"
+                (click)="openModal(template, coupon)"><i class="fas fa-cart-plus"></i> Aggiungi
         </button>
-        <button type="button" class="btn btn-primary text-white float-right" (click)="details(coupon)"><i class="fas fa-info-circle"></i> Details</button>
+        <button type="button" class="btn btn-primary text-white float-right" (click)="details(coupon)"><i class="fas fa-info-circle"></i> Dettagli</button>
       </div>
       <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
       <div class="coupon-cart cursor-pointer" *ngIf="inCart(coupon.id)" (click)="viewCart()">
@@ -22,7 +23,8 @@
 
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left"><i class="fas fa-plus-circle mr-3"></i>Add "{{modalCoupon.title.length > 20 ? modalCoupon.title.substring(0, 20) + '...' : modalCoupon.title}}" to the cart</h4>
+    <h4 class="modal-title pull-left"><i class="fas fa-plus-circle mr-3"></i>Aggiungi "{{modalCoupon.title.length > 20 ?
+      modalCoupon.title.substring(0, 20) + '...' : modalCoupon.title}}" nel carrello</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -31,8 +33,8 @@
   <div class="modal-body">
     <form [formGroup]="myForm" class="container">
       <div class="form-group row">
-        <label class="col-sm-7 my-auto" style="font-size: 16px;">Choose the quantity:<i class="text-info">
-          ({{maxQuantity}} available)</i></label>
+        <label class="col-sm-7 my-auto" style="font-size: 16px;">Inserisci la quantità: <i class="text-info">
+          ({{maxQuantity}} disponibil{{maxQuantity > 1 ? 'i' : 'e' }})</i></label>
 
         <input formControlName="quantity" class="col-sm-2 form-control d-inline-block" type="number" min="1"
                max="{{modalCoupon.quantity}}"/>
@@ -42,15 +44,15 @@
         </button>
         <button class="btn btn-primary col-sm-1 ml-1" (click)="add()" [disabled]="isMax"><i class="fas fa-plus text-white"></i></button>
 
-        <div class="col-sm-12 ml-2" style="color: #bd0a0d;" *ngIf="f.quantity.errors">Insert a valid quantity!</div>
+        <div class="col-sm-12 ml-2" style="color: #bd0a0d;" *ngIf="f.quantity.errors">Inserire una quantità valida!</div>
       </div>
     </form>
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="decline()">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="decline()">Annulla</button>
     <button [disabled]="inCart(modalCoupon.id)" type="button" class="btn btn-success" (click)="addToCart(modalCoupon)">
-      Add
+      Aggiungi
     </button>
   </div>
 </ng-template>
