--- a/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
+++ b/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
@@ -14,10 +14,10 @@
             {{producer.zip + ' - ' + producer.city + ' (' + producer.province + ')'}}
           </p>
 
-          <h4>Email Contact</h4>
+          <h4>Contatto Email</h4>
           <p class="ml-2"><a href="mailto:{{producer.email}}">{{producer.email}}</a></p>
           <div>
-            <button class="btn btn-danger float-right" (click)="retry()">Back to Shopping</button>
+            <button class="btn btn-danger float-right" (click)="retry()">Ritorna allo Shopping</button>
           </div>
         </div>
       </div>
