--- a/src/app/features/reserved-area/payment-details/payment-details.component.html
+++ b/src/app/features/reserved-area/payment-details/payment-details.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
           <img src="assets/img/avatars/7.jpg" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Update payment details</h6>
+          <h6 class="display-4" style="float:left; font-size:30pt;">Aggiorna dettagli del pagamento</h6>
         </div>
         <div class="p-4" *ngIf="user !== null">
           <form [formGroup]="updateRegistration" (ngSubmit)="onSubmit()">
@@ -13,32 +13,32 @@
               <div class="form-row">
                 <div class="input-group mb-3 col-md-6">
                   <div class="d-block w-100">
-                    <label for="company_name" class="label-tiny">Company Name</label>
+                    <label for="company_name" class="label-tiny">Nome Azienda</label>
                   </div>
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-briefcase"></i></span>
                   </div>
                   <input type="text" formControlName="company_name" class="form-control"
-                         placeholder="Company Name" id="company_name" maxlength="100"
+                         placeholder="Nome Azienda" id="company_name" maxlength="100"
                          [ngClass]="{ 'is-invalid': submitted && f.company_name.errors }"/>
 
                   <div *ngIf="this.submitted && f.company_name.errors" class="invalid-feedback">
-                    <div *ngIf="f.company_name.errors.required">Company Name is required</div>
+                    <div *ngIf="f.company_name.errors.required">È necessario inserire il nome dell'azienda</div>
                   </div>
                 </div>
                 <div class="input-group mb-3 col-md-6">
                   <div class="d-block w-100">
-                    <label for="vat_number" class="label-tiny">Vat Number</label>
+                    <label for="vat_number" class="label-tiny">Partita Iva</label>
                   </div>
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-chart"></i></span>
                   </div>
                   <input type="text" formControlName="vat_number" class="form-control"
-                         placeholder="Vat Number" id="vat_number" maxlength="11"
+                         placeholder="Partita Iva" id="vat_number" maxlength="11"
                          [ngClass]="{ 'is-invalid': submitted && f.vat_number.errors }" required/>
 
                   <div *ngIf="this.submitted && f.vat_number.errors" class="invalid-feedback">
-                    <div *ngIf="f.vat_number.errors.required">Vat Number is required</div>
+                    <div *ngIf="f.vat_number.errors.required">Partita iva obbligatoria</div>
                   </div>
                 </div>
               </div>
@@ -46,34 +46,34 @@
             <div class="form-row">
               <div class="input-group mb-4 col-md-6">
                 <div class="d-block w-100">
-                  <label for="first_name" class="label-tiny">First Name</label>
+                  <label for="first_name" class="label-tiny">Nome</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="icon-user"></i></span>
                 </div>
                 <input type="text" formControlName="first_name" class="form-control"
-                       placeholder="First Name" id="first_name" maxlength="40"
+                       placeholder="Nome" id="first_name" maxlength="40"
                        [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }"/>
 
                 <div *ngIf="submitted && f.first_name.errors" class="invalid-feedback">
-                  <div *ngIf="f.first_name.errors.required">First Name is required</div>
-                  <div *ngIf="f.first_name.errors.maxlength">First name must be long at max 40 characters</div>
+                  <div *ngIf="f.first_name.errors.required">Nome obbligatorio</div>
+                  <div *ngIf="f.first_name.errors.maxlength">Il nome deve essere lungo al massimo 40 caratteri</div>
                 </div>
               </div>
               <div class="input-group mb-4 ml-auto col-md-6">
                 <div class="d-block w-100">
-                  <label for="last_name" class="label-tiny">Last Name</label>
+                  <label for="last_name" class="label-tiny">Cognome</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="icon-user"></i></span>
                 </div>
                 <input type="text" formControlName="last_name" class="form-control"
-                       placeholder="Last Name" id="last_name" maxlength="40"
+                       placeholder="Cognome" id="last_name" maxlength="40"
                        [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }"/>
 
                 <div *ngIf="this.submitted && f.last_name.errors" class="invalid-feedback">
-                  <div *ngIf="f.last_name.errors.required">Last Name is required</div>
-                  <div *ngIf="f.last_name.errors.maxlength">Last name must be long at max 40 characters</div>
+                  <div *ngIf="f.last_name.errors.required">Cognome obbligatorio</div>
+                  <div *ngIf="f.last_name.errors.maxlength">Il cognome non deve superare 40 caratteri</div>
                 </div>
               </div>
 
@@ -81,129 +81,129 @@
             <div class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="birth_place" class="label-tiny">Birth place</label>
+                  <label for="birth_place" class="label-tiny">Luogo di Nascita</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="icon-location-pin"></i></span>
                 </div>
-                <input type="text" formControlName="birth_place" class="form-control" placeholder="Birth Place" id="birth_place"
+                <input type="text" formControlName="birth_place" class="form-control" placeholder="Luogo di Nascita" id="birth_place"
                        [ngClass]="{ 'is-invalid': submitted && f.birth_place.errors }"/>
 
                 <div *ngIf="submitted && f.birth_place.errors" class="invalid-feedback">
-                  <div *ngIf="f.birth_place.errors.required">Birth place is required</div>
-                  <div *ngIf="f.birth_place.errors.maxlength">Birth place must be long at max 50 characters</div>
+                  <div *ngIf="f.birth_place.errors.required">Luogo di Nascita obbligatorio</div>
+                  <div *ngIf="f.birth_place.errors.maxlength">Il luogo di nascita non deve superare 50 caratteri</div>
                 </div>
               </div>
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="birth_date" class="label-tiny">Birth date</label>
+                  <label for="birth_date" class="label-tiny">Data di nascita</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="icon-calendar"></i></span>
                 </div>
-                <input type="date" formControlName="birth_date" class="form-control" placeholder="Birth Date" id="birth_date"
+                <input type="date" formControlName="birth_date" class="form-control" placeholder="Data di nascita" id="birth_date"
                        [ngClass]="{ 'is-invalid': submitted && f.birth_date.errors }"/>
 
                 <div *ngIf="submitted && f.birth_date.errors" class="invalid-feedback">
-                  <div *ngIf="f.birth_date.errors.required">Birth date is required</div>
+                  <div *ngIf="f.birth_date.errors.required">Data di nascita obbligatoria</div>
                 </div>
               </div>
             </div> <!-- Birth place and birth date -->
             <div class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="fiscal_code" class="label-tiny">Fiscal code</label>
+                  <label for="fiscal_code" class="label-tiny">Codice fiscale</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-barcode"></i></span>
                 </div>
-                <input type="text" formControlName="fiscal_code" class="form-control" placeholder="Fiscal Code" id="fiscal_code"
+                <input type="text" formControlName="fiscal_code" class="form-control" placeholder="Codice fiscale" id="fiscal_code"
                        [ngClass]="{ 'is-invalid': submitted && f.fiscal_code.errors }"/>
 
                 <div *ngIf="submitted && f.fiscal_code.errors" class="invalid-feedback">
-                  <div *ngIf="f.fiscal_code.errors.required">Fiscal code is required</div>
-                  <div *ngIf="f.fiscal_code.errors.maxlength">Fiscal code must be long at max 16 characters</div>
-                  <div *ngIf="f.fiscal_code.errors.InvalidFiscalCode">Please insert a valid fiscal code</div>
+                  <div *ngIf="f.fiscal_code.errors.required">Codice fiscale obbligatorio</div>
+                  <div *ngIf="f.fiscal_code.errors.maxlength">Il CF deve essere lungo 16 caratteri</div>
+                  <div *ngIf="f.fiscal_code.errors.InvalidFiscalCode">Codice fiscale non valido</div>
                 </div>
 
               </div> <!-- Fiscal code -->
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="paypal_email" class="label-tiny">Paypal email</label>
+                  <label for="paypal_email" class="label-tiny">Email Paypal</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fab fa-paypal"></i></span>
                 </div>
-                <input type="text" formControlName="email_paypal" class="form-control" placeholder="Paypal email" id="paypal_email"
+                <input type="text" formControlName="email_paypal" class="form-control" placeholder="Email Paypal" id="paypal_email"
                        [ngClass]="{ 'is-invalid': submitted && f.email_paypal.errors }"/>
 
                 <div *ngIf="submitted && f.email_paypal.errors" class="invalid-feedback">
                   <!--<div *ngIf="f.email_paypal.errors.required">Email is required</div>-->
-                  <div *ngIf="f.email_paypal.errors">Please insert a valid email</div>
+                  <div *ngIf="f.email_paypal.errors">Email non valida</div>
                 </div>
               </div> <!-- Mail Paypal -->
             </div> <!-- Fiscal code and Paypal mail -->
             <div class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="address" class="label-tiny">Address</label>
+                  <label for="address" class="label-tiny">Indirizzo</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
                 </div>
-                <input type="text" formControlName="address" class="form-control" placeholder="Address" id="address"
+                <input type="text" formControlName="address" class="form-control" placeholder="Indirizzo" id="address"
                        [ngClass]="{ 'is-invalid': submitted && f.address.errors }"/>
 
                 <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
-                  <div *ngIf="f.address.errors.required">Address is required</div>
-                  <div *ngIf="f.address.errors.maxlength">Address must be long at max 100 characters</div>
+                  <div *ngIf="f.address.errors.required">Indirizzo obbligatorio</div>
+                  <div *ngIf="f.address.errors.maxlength">L'indirizzo non deve superare 50 caratteri</div>
                 </div>
               </div>
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="city" class="label-tiny">City</label>
+                  <label for="city" class="label-tiny">Città</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-globe"></i></span>
                 </div>
-                <input type="text" formControlName="city" class="form-control" placeholder="City" id="city"
+                <input type="text" formControlName="city" class="form-control" placeholder="Città" id="city"
                        [ngClass]="{ 'is-invalid': submitted && f.city.errors }"/>
 
                 <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
-                  <div *ngIf="f.city.errors.required">City is required</div>
-                  <div *ngIf="f.city.errors.maxlength">Birth place must be long at max 50 characters</div>
+                  <div *ngIf="f.city.errors.required">Città obbligatoria</div>
+                  <div *ngIf="f.city.errors.maxlength">Il luogo di nascita non deve superare 50 caratteri</div>
                 </div>
               </div>
             </div> <!-- Address and Residence City -->
             <div class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="province" class="label-tiny">Province</label>
+                  <label for="province" class="label-tiny">Provincia</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-map"></i></span>
                 </div>
-                <input type="text" formControlName="province" class="form-control" placeholder="Province" id="province"
+                <input type="text" formControlName="province" class="form-control" placeholder="Provincia" id="province"
                        [ngClass]="{ 'is-invalid': submitted && f.province.errors }" maxlength="2"/>
 
                 <div *ngIf="submitted && f.province.errors" class="invalid-feedback">
-                  <div *ngIf="f.province.errors.required">Province is required</div>
-                  <div *ngIf="f.province.errors.maxlength">Province must be long at max 2 characters</div>
+                  <div *ngIf="f.province.errors.required">Provincia obbligatoria</div>
+                  <div *ngIf="f.province.errors.maxlength">La provincia non deve superare i 2 caratteri</div>
                 </div>
               </div>
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
-                  <label for="zip_code" class="label-tiny">ZIP code</label>
+                  <label for="zip_code" class="label-tiny">CAP</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-code"></i></span>
                 </div>
-                <input type="text" formControlName="zip" class="form-control" placeholder="Zip Code" id="zip_code"
+                <input type="text" formControlName="zip" class="form-control" placeholder="CAP" id="zip_code"
                        [ngClass]="{ 'is-invalid': submitted && f.zip.errors }" maxlength="5"/>
 
                 <div *ngIf="submitted && f.zip.errors" class="invalid-feedback">
-                  <div *ngIf="f.zip.errors.required">Zip Code is required</div>
-                  <div *ngIf="f.zip.errors.maxlength">Zip Code must be long at max 5 numbers</div>
+                  <div *ngIf="f.zip.errors.required">CAP obbligatorio</div>
+                  <div *ngIf="f.zip.errors.maxlength">Il CAP non deve superare i 5 caratteri</div>
                 </div>
               </div>
             </div> <!-- Province and Zip Code-->
@@ -219,24 +219,24 @@
                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password"/>
 
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                  <div *ngIf="f.password.errors.required">Password is required</div>
-                  <div *ngIf="f.password.errors.minlength">Password must be long at least 10 characters</div>
+                  <div *ngIf="f.password.errors.required">Password obbligatoria</div>
+                  <div *ngIf="f.password.errors.minlength">La Password deve essere di almeno 10 caratteri</div>
                 </div>
               </div>
               <div class="input-group mb-4 col-md-6">
                 <div class="d-block w-100">
-                  <label for="r_password" class="label-tiny">Confirm Password</label>
+                  <label for="r_password" class="label-tiny">Conferma Password</label>
                 </div>
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="icon-lock"></i></span>
                 </div>
-                <input type="password" formControlName="r_password" class="form-control" placeholder="Repeat password"
+                <input type="password" formControlName="r_password" class="form-control" placeholder="Conferma Password"
                        id="r_password">
               </div>
               <div class="alert alert-danger col-md-12"
-                   *ngIf="submitted && f.r_password.errors?.MatchPassword">Password not match
+                   *ngIf="submitted && f.r_password.errors?.MatchPassword">Password non valida
               </div>
-              <button class="btn btn-block btn-success">Update Account</button>
+              <button class="btn btn-block btn-success">Aggiorna Account</button>
             </div> <!-- Password and repeated password -->
           </form>
         </div>
@@ -247,20 +247,20 @@
 
 <ng-template #updateInfo>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Are you sure?</h4>
+    <h4 class="modal-title pull-left">Sei sicuro?</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    Do you really want to update your informations? You will be logged out from the platform.
+    Vuoi veramente aggiornare le tue informazioni? Sarai disconnesso dalla piattaforma.
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
     <button type="button" class="btn btn-success" (click)="updateUser()">
-      Yes
+      Si
     </button>
   </div>
 </ng-template>
