--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="float-right">
       <span>
-        Powered by
+        Offerto da
         <a href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">
           Dipartimento di Matematica e Informatica
         </a>
@@ -18,7 +18,7 @@
       <p style="max-height: 20px" class="mb-0"><a href="https://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</p>
     </div>
     <div class="col-12">
-      <p style="max-height: 40px;">Powered by
+      <p style="max-height: 40px;">Offerto da
         <a href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">
           Dipartimento di Matematica e Informatica
         </a>
