--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
          class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-start align-items-center">
           <span class="fas fa-archway mr-3"></span>
-          <span class="menu-collapsed">Contents</span>
+          <span class="menu-collapsed">Contenuti</span>
 
         </div>
       </a>
@@ -20,13 +20,13 @@
 
         <div *ngIf="this.userType == '1' || this.userType == '0'">
           <a  [routerLink]="['/reserved-area/producer/list']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed ">My coupons</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed ">I miei Coupons</span>
           </a>
           <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Add new coupon</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Aggiungi un Coupon</span>
           </a>
           <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Reports</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Resoconto</span>
           </a>
         </div>
 
@@ -35,21 +35,21 @@
             <span (click)="hideSideBar(!hide)" class="menu-collapsed">Shopping</span>
           </a>
           <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">My purchases</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">I miei Acquisti</span>
           </a>
           <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Get Coupon by Token</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Acquisisci Coupon</span>
           </a>
         </div>
 
         <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
           <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Verifier page</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Pagina del Verificatore</span>
           </a>
         </div>
 
         <a class="list-group-item list-group-item-action text-secondary">
-          <span class="menu-collapsed">Other to Add</span>
+          <span class="menu-collapsed">Altro da Aggiungere</span>
         </a>
       </div>
 
@@ -58,22 +58,22 @@
            class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-start align-items-center">
             <span class="fa fa-user fa-fw mr-3"></span>
-            <span  class="menu-collapsed">Account</span>
+            <span  class="menu-collapsed">Il mio profilo</span>
           </div>
         </a>
         <!-- Submenu content -->
         <div  class="padding-left-sidebar-item align-items-start">
           <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Personal info</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Informazioni personali</span>
           </a>
           <a class="list-group-item list-group-item-action text-secondary">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Settings</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Impostazioni</span>
           </a>
           <a [routerLink]="['/reserved-area/' + userStringType +'/payment-details']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Payment details</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Dettaglio Pagamenti</span>
           </a>
           <a class="list-group-item list-group-item-action text-secondary">
-            <span (click)="hideSideBar(!hide)"  class="menu-collapsed">Receipts</span>
+            <span (click)="hideSideBar(!hide)"  class="menu-collapsed">Ricevute</span>
           </a>
         </div>
       </div>
@@ -81,14 +81,14 @@
       <a class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-start align-items-center">
           <span class="fa fa-question fa-fw mr-3"></span>
-          <span class="menu-collapsed text-secondary">Help</span>
+          <span class="menu-collapsed text-secondary">Aiuto</span>
         </div>
       </a>
       <a data-toggle="sidebar-collapse"
          class="list-group-item list-group-item-action d-flex align-items-center">
         <div class="d-flex w-100 justify-content-start align-items-center">
           <span id="collapse-icon" class="fa fa-arrow-left fa-fw mr-3"></span>
-          <span id="collapse-text" class="menu-collapsed text-secondary">Collapse</span>
+          <span id="collapse-text" class="menu-collapsed text-secondary">Riduci</span>
         </div>
       </a>
     </ul>
