--- a/src/app/features/authentication/login/login.component.html
+++ b/src/app/features/authentication/login/login.component.html
@@ -17,10 +17,10 @@
         <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
           <div class="card-body text-center">
             <div>
-              <h2>Sign up</h2>
-              <p>If you are not still signed up to our service, please do it as fast as possible!</p>
+              <h2>Registrati</h2>
+              <p>Se non sei ancora iscritto al nostro servizio, ti preghiamo di farlo il più velocemente possibile!</p>
               <a [routerLink]="['../register']">
-                <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                <button type="button" class="btn btn-primary active mt-3">Registrati ora!</button>
               </a>
             </div>
           </div>
