--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -5,7 +5,7 @@
 
   <div class="col px-0" id="main-content">
     <app-core-breadcrumb ></app-core-breadcrumb>
-    <div   class="container-fluid container-fluid-header" id="main-container">
+    <div  class="container-fluid" id="main-container">
       <router-outlet></router-outlet>
     </div>
 
