--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -2,11 +2,11 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title XL</th>
-      <th style="width: 10%">Image</th>
-      <th style="width: 10%">Price</th>
-      <th style="width: 10%">Quantity</th>
-      <th style="width: 10%">Expiration</th>
+      <th style="width: 40%">Titolo</th>
+      <th style="width: 10%">Immagine</th>
+      <th style="width: 10%">Prezzo</th>
+      <th style="width: 10%">Quantità</th>
+      <th style="width: 10%">Scadenza</th>
       <th style="width: 5%"></th>
       <th style="width: 5%"></th>
       <th style="width: 5%"></th>
@@ -21,7 +21,7 @@
       <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)" alt="Card image cap"></td>
       <td>{{formatPrice(coupon.price)}}</td>
       <td>{{coupon.quantity}}</td>
-      <td>{{coupon.valid_until === null? 'Unlimited': formatUntil(coupon.valid_until) }}</td>
+      <td>{{coupon.valid_until === null? 'Illimitata': formatUntil(coupon.valid_until) }}</td>
       <td>
         <button class="btn btn-secondary" (click)="changeQuantity(coupon, false)" [disabled]="coupon.quantity === 1">
           <i class="fas fa-minus text-white"></i>
@@ -34,30 +34,30 @@
 
       <td>
         <button type="button" class="btn btn-outline-dark" (click)="details(coupon)"><i
-          class="fas fa-info-circle"></i> <span class="d-xl-inline-block d-lg-none">Details</span>
+          class="fas fa-info-circle"></i> <span class="d-xl-inline-block d-lg-none">Dettagli</span>
         </button>
       </td>
       <td>
         <button type="button" class="btn btn-danger" (click)="openModal(template)"><i class="fas fa-trash"></i>
-          <span class="d-xl-inline-block d-lg-none">Delete</span>
+          <span class="d-xl-inline-block d-lg-none">Elimina</span>
         </button>
       </td>
 
       <ng-template #template>
         <div class="modal-header">
-          <h4 class="modal-title pull-left">Coupon delete</h4>
+          <h4 class="modal-title pull-left">Elimina il Coupon</h4>
           <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
 
         <div class="modal-body">
-          Do you really want to remove this coupon from the cart?
+          Vuoi davvero rimuovere questo coupon dal carrello?
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
-          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Yes</button>
+          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Si</button>
         </div>
       </ng-template>
     </tr>
@@ -68,19 +68,19 @@
   </table>
   <div class="card-body p-0">
     <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
-      class="fas fa-euro-sign mr-2"></i>Go to checkout
+      class="fas fa-euro-sign mr-2"></i>Vai alla cassa
     </button>
-    <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
+    <button class="btn btn-lg btn-primary float-right" (click)="retry()">Vai allo shopping</button>
     <button class="btn btn-lg btn-warning text-white float-left" (click)="openModal(emptyCartTemplate)"><i
-      class="fas fa-trash"></i> Empty cart
+      class="fas fa-trash"></i> Svuota il Carrello
     </button>
   </div>
   <div *ngIf="cart.length === 0" class="row">
     <div class="col-sm-12"><img class="mx-auto d-block img-fluid" src="assets/img/empty.png"></div>
     <div class="col-sm-12">
-      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">Go to your purchases
+      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">Vai ai tuoi acquisti
       </button>
-      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
+      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Vai allo shopping</button>
     </div>
   </div>
 </div><!-- XL + LG VIEW -->
@@ -88,10 +88,10 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 35%">Title MD</th>
-      <th style="width: 15%">Price</th>
-      <th style="width:  5%">Qnt</th>
-      <th style="width:  5%">Expiration</th>
+      <th style="width: 35%">Titolo</th>
+      <th style="width: 15%">Prezzo</th>
+      <th style="width:  5%">Quantità</th>
+      <th style="width:  5%">Scadenza</th>
       <th style="width: 40%"></th>
     </tr>
     </thead>
@@ -119,19 +119,19 @@
 
       <ng-template #template>
         <div class="modal-header">
-          <h4 class="modal-title pull-left">Coupon delete</h4>
+          <h4 class="modal-title pull-left">Elimina il Coupon</h4>
           <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
 
         <div class="modal-body">
-          Do you really want to remove this coupon from the cart?
+          Vuoi davvero rimuovere questo coupon dal carrello?
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
-          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Yes</button>
+          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Si</button>
         </div>
       </ng-template>
     </tr>
@@ -142,19 +142,19 @@
   </table>
   <div class="card-body p-0">
     <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
-      class="fas fa-euro-sign mr-2"></i>Go to checkout
+      class="fas fa-euro-sign mr-2"></i>Vai alla cassa
     </button>
     <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
     <button class="btn btn-lg btn-warning text-white float-left" (click)="openModal(emptyCartTemplate)"><i
-      class="fas fa-trash"></i> Empty cart
+      class="fas fa-trash"></i> Svuota il Carrello
     </button>
   </div>
   <div *ngIf="cart.length === 0" class="row">
     <div class="col-sm-12"><img class="mx-auto d-block img-fluid" src="assets/img/empty.png"></div>
     <div class="col-sm-12">
-      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">Go to your purchases
+      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">Vai ai tuoi acquisti
       </button>
-      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
+      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Vai allo shopping</button>
     </div>
   </div>
 </div> <!-- MD VIEW -->
@@ -195,19 +195,19 @@
 
       <ng-template #template>
         <div class="modal-header">
-          <h4 class="modal-title pull-left">Coupon delete</h4>
+          <h4 class="modal-title pull-left">Elimina il Coupon</h4>
           <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
 
         <div class="modal-body">
-          Do you really want to remove this coupon from the cart?
+          Vuoi davvero rimuovere questo coupon dal carrello?
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
-          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Yes</button>
+          <button type="button" class="btn btn-success" (click)="onDelete(coupon)">si</button>
         </div>
       </ng-template>
 
@@ -215,7 +215,7 @@
     </div>
     <div style="padding-bottom: 5em">
       <button class="btn btn-lg btn-success float-right" type="button" (click)="goToDetailPayment()"><i
-        class="fas fa-euro-sign mr-2"></i> Pay
+        class="fas fa-euro-sign mr-2"></i> Paga
       </button>
       <button class="btn btn-lg btn-primary float-right mr-sm-0 mr-1" (click)="retry()"><i
         class="fas fa-shopping-basket"></i> Shopping
@@ -227,9 +227,9 @@
   <div *ngIf="cart.length === 0" class="row">
     <div class="col-sm-12"><img class="mx-auto d-block img-fluid" src="assets/img/empty.png"></div>
     <div class="col-sm-12">
-      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">My purchases
+      <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="openBought()">I miei Acquisti
       </button>
-      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go to shopping</button>
+      <button class="btn btn-lg btn-primary float-right" (click)="retry()">Vai allo shopping</button>
     </div>
   </div>
 
@@ -237,20 +237,20 @@
 
 <ng-template #emptyCartTemplate>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Confirm to empty the cart</h4>
+    <h4 class="modal-title pull-left">Conferma per svuotare il carrello</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    <p>Are you really sure to empty your cart? This operation is not reversible.</p>
+    <p>Sei davvero sicuro di svuotare il carrello? Questa operazione non è reversibile.</p>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
     <button href="/reserved-area/consumer/cart-detail-payment" type="button" class="btn btn-success"
-            (click)="emptyCart()">Yes
+            (click)="emptyCart()">Si
     </button>
   </div>
 </ng-template>
