--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -5,7 +5,7 @@
         <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
           <h3 class="card-title mb-0">{{couponPass.title}}</h3>
-          <p *ngIf="couponPass.owner">by
+          <p *ngIf="couponPass.owner">di
               <i [routerLink]="['/reserved-area/consumer/producer-info']"
                  class="font-weight-bold text-primary cursor-pointer">{{producer === null ? null : producer.username}}</i>
           </p>
@@ -16,21 +16,24 @@
           </div>
 
           <p class="card-text mt-3">{{couponPass.description}}</p>
-          <p *ngIf="couponPass.quantity > 10" class="card-text"><i style="color:#19ff26">In stock.</i></p>
+          <p *ngIf="couponPass.quantity > 10" class="card-text"><i style="color:#19ff26">Disponibile.</i></p>
 
-          <p *ngIf="couponPass.quantity > 4 && couponPass.quantity < 10" class="card-text"><i style="color:#ffd51c">Running
-            out.</i></p>
+          <p *ngIf="couponPass.quantity > 4 && couponPass.quantity < 10" class="card-text"><i style="color:#ffd51c">Sta finendo.</i></p>
 
           <p *ngIf="couponPass.quantity > 0 && couponPass.quantity < 5" class="card-text">
             <i style="color:#FF0000">
-              Only {{couponPass.quantity}} unit{{couponPass.quantity === 1 ? '' : 's'}} available.
+
+              Solo {{couponPass.quantity}} disponibil{{couponPass.quantity === 1 ? 'e' : 'i'}} .
+
+              <!--english version-->
+              <!--Only {{couponPass.quantity}} unit{{couponPass.quantity === 1 ? '' : 's'}} available.-->
             </i>
           </p>
-          <p *ngIf="couponPass.quantity < 1" class="card-text"><i style="color:rgba(55,87,85,0.15)"> Out of stock.</i>
+          <p *ngIf="couponPass.quantity < 1" class="card-text"><i style="color:rgba(55,87,85,0.15)"> Terminati</i>
           </p>
 
           <p class="card-text">
-            <i class="fas fa-fw  fa-clock text-secondary"></i> Validity: {{formatUntil(couponPass.valid_until)}}
+            <i class="fas fa-fw  fa-clock text-secondary"></i> Validità: {{formatUntil(couponPass.valid_until)}}
             <br/>
 
             <span *ngIf="couponPass.constraints">
@@ -45,19 +48,19 @@
             <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0"
                     class="btn btn-lg btn-success float-right ml-2"
                     [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">
-              Add to cart
+              Aggiungi al carrello
             </button>
             <button *ngIf="inCart(couponPass.id)" class="btn btn-lg btn-success float-right ml-2" (click)="viewCart()"><i class="fas fa-shopping-cart"></i> Go to cart</button>
-            <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
+            <button class="btn btn-lg btn-primary float-right" (click)="retry()">Ritorna allo shopping</button>
           </div>
 
           <div *ngIf="!desktopMode">
             <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0"
                     class="btn btn-lg btn-success float-right ml-2"
                     [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">
-              <i class="fas fa-cart-plus"> Add</i>
+              <i class="fas fa-cart-plus"> Aggiungi</i>
             </button>
-            <button *ngIf="inCart(couponPass.id)" class="btn btn-lg btn-success float-right ml-2" (click)="viewCart()"><i class="fas fa-shopping-cart"> Cart</i></button>
+            <button *ngIf="inCart(couponPass.id)" class="btn btn-lg btn-success float-right ml-2" (click)="viewCart()"><i class="fas fa-shopping-cart"> Carrello</i></button>
             <button class="btn btn-lg btn-primary float-right" (click)="retry()"><i class="fas fa-shopping-basket"> Shopping</i></button>
           </div>
 
@@ -70,7 +73,7 @@
 
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Add "{{couponPass.title.length > 20 ? couponPass.title.substring(0, 20) + '...' :
+    <h4 class="modal-title pull-left">Aggiungi "{{couponPass.title.length > 20 ? couponPass.title.substring(0, 20) + '...' :
       couponPass.title}}" to shopping cart</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
@@ -81,8 +84,8 @@
     <form [formGroup]="myForm" class="container">
       <!--<label class="row">You are adding <i class="text-info">{{' ' + modalCoupon.title + ' '}}</i> to the cart. </label>-->
       <div class="form-group row">
-        <label class="col-sm-7 my-auto" style="font-size: 16px;">Choose the quantity:<i class="text-info">
-          ({{couponPass.max_quantity}} available)</i></label>
+        <label class="col-sm-7 my-auto" style="font-size: 16px;">Seleziona la quantità: <i class="text-info">
+          ({{couponPass.max_quantity}} disponibil{{couponPass.max_quantity > 1? 'i' : 'e'}})</i></label>
 
         <input formControlName="quantity" class="col-sm-2 form-control d-inline-block" type="number" min="1"
                max="{{couponPass.max_quantity}}"/>
@@ -93,13 +96,13 @@
         <button class="btn btn-primary col-sm-1 ml-1" (click)="add()" [disabled]="isMax"><i
           class="fas fa-plus text-white"></i></button>
 
-        <div class="col-sm-12 ml-2" style="color: #bd0a0d;" *ngIf="f.quantity.errors">Insert a valid quantity!</div>
+        <div class="col-sm-12 ml-2" style="color: #bd0a0d;" *ngIf="f.quantity.errors">Inserire una quantità valida!</div>
       </div>
     </form>
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="addToCart()">Add</button>
+    <button type="button" class="btn btn-danger" (click)="closeModal()">Annulla</button>
+    <button type="button" class="btn btn-success" (click)="addToCart()">Aggiungi</button>
   </div>
 </ng-template>
