--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -2,12 +2,12 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title</th>
-      <th style="width: 10%">Image</th>
-      <th style="width: 10%">Price</th>
-      <th style="width: 10%">State</th>
-      <th style="width: 10%">Unities</th>
-      <th style="width: 5%">Sold</th>
+      <th style="width: 40%">Titolo</th>
+      <th style="width: 10%">Immagine</th>
+      <th style="width: 10%">Prezzo</th>
+      <th style="width: 10%">Stato</th>
+      <th style="width: 10%">Unità</th>
+      <th style="width: 5%">Venduto</th>
       <th style="width: 5%"></th>
       <th style="width: 5%"></th>
       <th style="width: 5%"></th>
@@ -30,32 +30,32 @@
 
 
       <td>
-        <button type="button" class="btn btn-primary" (click)="onCopy(coupon)"><i class="far fa-copy"></i> Copy</button>
+        <button type="button" class="btn btn-primary" (click)="onCopy(coupon)"><i class="far fa-copy"></i> Copia</button>
       </td>
       <td>
-        <button type="button" class="btn btn-info text-white" (click)="onEdit(coupon)"><i class="fas fa-edit"></i> Edit
+        <button type="button" class="btn btn-info text-white" (click)="onEdit(coupon)"><i class="fas fa-edit"></i> Modifica
         </button>
       </td>
       <td>
         <button type="button" class="btn btn-danger" (click)="openModal(template)"><i class="fas fa-trash-alt"></i>
-          Delete
+          Elimina
         </button>
 
         <ng-template #template>
           <div class="modal-header">
-            <h4 class="modal-title pull-left">Coupon delete</h4>
+            <h4 class="modal-title pull-left">Elimina il Coupon</h4>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
 
           <div class="modal-body">
-            Are you sure to delete this coupon? This operation is not reversable!
+            Sei sicuro di cancellare questo coupon? Questa operazione è irreversibile!
           </div>
 
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-            <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Yes</button>
+            <button type="button" class="btn btn-success" (click)="onDelete(coupon)">Si</button>
           </div>
         </ng-template>
       </td>
@@ -68,12 +68,12 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title</th>
-      <th style="width: 10%">Image</th>
-      <th style="width: 10%">Price</th>
-      <th style="width: 10%">State</th>
-      <th style="width: 10%">Unities</th>
-      <th style="width: 5%;">Sold</th>
+      <th style="width: 40%">Titolo</th>
+      <th style="width: 10%">Immagine</th>
+      <th style="width: 10%">Prezzo</th>
+      <th style="width: 10%">Stato</th>
+      <th style="width: 10%">Unità</th>
+      <th style="width: 5%;">Venduto</th>
       <th style="width: 15%;"></th>
     </tr>
     </thead>
@@ -96,16 +96,16 @@
         <div class="btn-group" dropdown>
           <button id="action-button" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="action-button">
-            Action <span class="caret"></span>
+            Azioni <span class="caret"></span>
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
               aria-labelledby="action-button">
             <li role="menuitem"><a class="dropdown-item" (click)="onCopy(coupon)"><i
-              class="far fa-copy text-primary"></i> Copy</a></li>
+              class="far fa-copy text-primary"></i> Copia</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="onEdit(coupon)"><i class="fas fa-edit text-info"></i>
-              Edit</a></li>
+              Modifica</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="openModal(template)"><i
-              class="fas fa-trash-alt text-danger"></i> Delete</a></li>
+              class="fas fa-trash-alt text-danger"></i> Elimina</a></li>
           </ul>
         </div>
       </td>
@@ -118,10 +118,10 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 48%">Title</th>
-      <th style="width: 22%">Price</th>
-      <th style="width: 10%">State</th>
-      <th style="width: 10%">Sold</th>
+      <th style="width: 48%">Titolo</th>
+      <th style="width: 22%">Prezzo</th>
+      <th style="width: 10%">Stato</th>
+      <th style="width: 10%">Venduto</th>
       <th style="width: 10%"></th>
     </tr>
     </thead>
@@ -143,16 +143,16 @@
         <div class="btn-group" dropdown>
           <button id="action-button-2" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="action-button-2">
-            Action <span class="caret"></span>
+            Azioni <span class="caret"></span>
           </button>
           <ul id="dropdown-basic-2" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
               aria-labelledby="action-button-2">
             <li role="menuitem"><a class="dropdown-item" (click)="onCopy(coupon)"><i
-              class="far fa-copy text-primary"></i> Copy</a></li>
+              class="far fa-copy text-primary"></i> Copia</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="onEdit(coupon)"><i
-              class="fas fa-edit text-primary"></i> Edit</a></li>
+              class="fas fa-edit text-primary"></i> Modifica</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="openModal(template)"><i
-              class="fas fa-trash-alt text-primary"></i> Delete</a></li>
+              class="fas fa-trash-alt text-primary"></i> Elimina</a></li>
           </ul>
         </div>
       </td>
