--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -4,23 +4,23 @@
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
           <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Verifier coupon</h6>
+          <h6 class="display-4" style="float:left; font-size:30pt;">Verifica Coupon</h6>
         </div>
         <div class="card-body p-5">
           <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
             <div class="form-group row">
-              <label class="col-lg-4 col-sm-4 col-form-label">Insert token</label>
+              <label class="col-lg-4 col-sm-4 col-form-label">Inserisci il Token</label>
               <div class="col-lg-4 col-sm-4">
 
                 <input type="text" formControlName="token" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
                 <div *ngIf="submitted && f.token.errors" class="invalid-feedback">
-                  <div *ngIf="f.token.errors">Insert a valid token!</div>
+                  <div *ngIf="f.token.errors">Inserisci un Token valido!</div>
                 </div>
               </div>
               <div class="form group col-lg-4 col-sm-4">
                 <p>
-                  <button class="btn btn-block btn-success btn-redeems">Validate</button>
+                  <button class="btn btn-block btn-success btn-redeems">Verifica</button>
                 </p>
               </div>
             </div>
@@ -38,8 +38,9 @@
               <div *ngIf="isScan">
                 <div *ngIf="availableDevices">
                   <select (change)="onDeviceSelectChange($event.target.value)">
-                    <option value="" [selected]="!selectedDevice">Select Device</option>
-                    <option *ngFor="let device of availableDevices" [value]="device.deviceId" [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
+                    <option value="" [selected]="!selectedDevice">Seleziona</option>
+                    <option *ngFor="let device of availableDevices" [value]="device.deviceId"
+                            [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
                   </select>
                 </div>
 
@@ -48,7 +49,7 @@
             </div>
             <div class="form group col-lg-4 col-sm-4">
               <p>
-                <button class="btn btn-block btn-success btn-redeems" (click)="scan()">Scan Qr-code</button>
+                <button class="btn btn-block btn-success btn-redeems" (click)="scan()">Scansiona il QR code</button>
               </p>
             </div>
           </div>
